src/pygrep_hooks/snapshots/ruff__pygrep_hooks__tests__PGH001_PGH001_0.py.snap
---
source: src/pygrep_hooks/mod.rs
expression: checks
---
- kind: NoEval
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix: ~
  parent: ~
- kind: NoEval
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix: ~
  parent: ~

