src/pygrep_hooks/snapshots/ruff__pygrep_hooks__tests__PGH002_PGH002_1.py.snap
---
source: src/pygrep_hooks/mod.rs
expression: diagnostics
---
- kind:
    DeprecatedLogWarn: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 12
  fix: ~
  parent: ~
- kind:
    DeprecatedLogWarn: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 4
  fix: ~
  parent: ~

