src/pygrep_hooks/snapshots/ruff__pygrep_hooks__tests__PGH003_PGH003_0.py.snap
---
source: src/pygrep_hooks/mod.rs
expression: checks
---
- kind: BlanketTypeIgnore
  location:
    row: 1
    column: 7
  end_location:
    row: 1
    column: 21
  fix: ~
  parent: ~
- kind: BlanketTypeIgnore
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 20
  fix: ~
  parent: ~
- kind: BlanketTypeIgnore
  location:
    row: 3
    column: 7
  end_location:
    row: 3
    column: 20
  fix: ~
  parent: ~

